<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                app:navigationIcon="@drawable/ic_baseline_menu_24"
                app:title="@string/homePage" />

        </com.google.android.material.appbar.AppBarLayout>


        <!-- Use app:layout_behavior="@string/appbar_scrolling_view_behavior" to fit below top app bar -->

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.example.basagrisitakip.components.ButtonForList
                android:id="@+id/pills_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:ListHeaderName="Kullandığım İlaçlar"
                app:ListDescriptionOfList="Lütfen kullandığınız ilaçları seçiniz."
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.example.basagrisitakip.components.ButtonForList
                android:id="@+id/triggers_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:ListHeaderName="Tetikleyiciler"
                app:ListDescriptionOfList="Lütfen ağrınızı tetikleyenleri seçiniz."
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/pills_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.example.basagrisitakip.components.ButtonForList
                android:id="@+id/symptoms_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:ListHeaderName="Semptomlar"
                app:ListDescriptionOfList="Lütfen semptomlarınızı seçiniz."
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/triggers_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <TextView
                android:id="@+id/start_time_textview"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_10"
                android:layout_marginTop="@dimen/size_20"
                android:text="@string/start_time_selecting_dots"
                android:textSize="@dimen/text_size_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/symptoms_button"/>

            <TextView
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:textSize="@dimen/text_size_18"
                android:fontFamily="@font/adamina"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/start_time_textview"
                app:layout_constraintBottom_toBottomOf="@id/start_time_textview"
                android:layout_marginEnd="@dimen/size_20"/>

            <TextView
                android:id="@+id/end_time_textview"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_10"
                android:layout_marginTop="@dimen/size_15"
                android:text="@string/end_time_selecting_dots"
                android:textSize="@dimen/text_size_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/start_time_textview"/>

            <TextView
                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:textSize="@dimen/text_size_18"
                android:fontFamily="@font/adamina"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/end_time_textview"
                app:layout_constraintBottom_toBottomOf="@id/end_time_textview"
                android:layout_marginEnd="@dimen/size_20"/>

            <TextView
                android:id="@+id/pain_intensity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pain_intensity"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:textSize="@dimen/text_size_18"
                app:layout_constraintVertical_bias="0.2"
                app:layout_constraintBottom_toTopOf="@id/save_button"
                app:layout_constraintTop_toBottomOf="@id/end_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <SeekBar
                android:id="@+id/pain_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_15"
                android:layout_marginEnd="@dimen/size_15"
                android:layout_marginTop="@dimen/size_20"
                app:layout_constraintTop_toBottomOf="@id/pain_intensity_tv"
                android:splitTrack="false"/>



            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="@dimen/size_30"/>

            <!-- Screen content -->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/main_navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_drawer_header"
        app:menu="@menu/navigation_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>