<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/size_7"
    android:layout_marginStart="@dimen/size_5"
    android:layout_marginEnd="@dimen/size_5"
    android:elevation="@dimen/size_16"
    android:padding="@dimen/size_10"
    app:cardCornerRadius="@dimen/size_10">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/size_7">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/record_card_image"
            android:layout_width="@dimen/size_70"
            android:layout_height="@dimen/size_70"
            android:src="@drawable/intensity1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/record_item_start_time_tv"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_7"
            android:text="@string/starting_time_dots"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintStart_toEndOf="@id/record_card_image"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/record_item_end_time_tv"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_7"
            android:layout_marginTop="@dimen/size_5"
            android:text="@string/end_time_dots"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintStart_toEndOf="@id/record_card_image"
            app:layout_constraintTop_toBottomOf="@id/record_item_start_time_tv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/record_item_intensity_tv"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_7"
            android:layout_marginTop="@dimen/size_5"
            android:text="@string/pain_intensity_dots"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintStart_toEndOf="@id/record_card_image"
            app:layout_constraintTop_toBottomOf="@id/record_item_end_time_tv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/record_item_start_time"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="12.12.2021  15.45"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/record_item_start_time_tv"
            app:layout_constraintTop_toTopOf="@id/record_item_start_time_tv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/record_item_end_time"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="12.12.2021  15.45"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/record_item_end_time_tv"
            app:layout_constraintTop_toTopOf="@id/record_item_end_time_tv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/record_item_intensity"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingEnd="@dimen/size_10"
            android:text="7"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/record_item_intensity_tv"
            app:layout_constraintTop_toTopOf="@id/record_item_intensity_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>